fix styling on smaller screens

--- a/front-end/src/components/AddRecipeModal/AddRecipeModal.css
+++ b/front-end/src/components/AddRecipeModal/AddRecipeModal.css
@@ -2,7 +2,7 @@
   max-width: 600px !important;
 }
 
-form {
+.add-recipe-form {
   width: auto !important;
 }
 
