--- a/front-end/src/components/SignIn/SignIn.css
+++ b/front-end/src/components/SignIn/SignIn.css
@@ -7,5 +7,5 @@
 }
 
 form {
-  width: 500px;
+  width: 500px !important;
 }
